--- a/index.html
+++ b/index.html
@@ -13,19 +13,36 @@
 </head>
 <body>
     <div id="wrap">
+        <div class="header">
+            <div class="center">
+                <h1><a href="http://ryuda0101.dothome.co.kr/">R.DAYEON</a></h1>
+                <ul>
+                    <li><a href="">Artwork 01</a></li>
+                    <li><a href="">Artwork 02</a></li>
+                    <li><a href="">Artwork 03</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="main_banner">
             <div class="center">
                 <h4 class="bg">Web Publisher</h4>
                 <div class="top_line">
                     <h2></h2>
-                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                    <!-- <h3>언제나 새로운 것에 도전하고 끊임없이 성장하는 퍼블리셔를 추구합니다.</h3> -->
+                    <h3>UI / UX DESIGNER & WEB PUBLISHER</h3>
                 </div>
                 <div class="bot_line">
-                    <div class="left"></div>
-                    <div class="right">
-                        <h2>류다연</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas viverra ipsum libero. Aliquam et eleifend velit. Sed molestie justo nisl, vitae auctor ligula vehicula nec. Praesent pulvinar tempor nisi. Donec eu felis at sem ultricies rhoncus. Vestibulum sit amet iaculis nisi, vel dapibus sem. Sed vel turpis maximus, vestibulum metus non, ornare erat. Morbi hendrerit, ante sed rhoncus ultricies, tellus lectus euismod augue, non viverra metus nibh eget urna. Proin diam lacus, tempor non felis eu, vestibulum maximus ligula. Etiam eu blandit justo. Nulla facilisi. Donec mi orci, feugiat in tempus at, dignissim at ipsum. Nulla eleifend congue purus, sed consequat justo suscipit id.</p>
-                    </div>
+                    <h2>SKILLS</h2>
+                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas viverra ipsum libero. Aliquam et eleifend velit. Sed molestie justo nisl, vitae auctor ligula vehicula nec. Praesent pulvinar tempor nisi. Donec eu felis at sem ultricies rhoncus. Vestibulum sit amet iaculis nisi, vel dapibus sem. Sed vel turpis maximus, vestibulum metus non, ornare erat. Morbi hendrerit, ante sed rhoncus ultricies, tellus lectus euismod augue, non viverra metus nibh eget urna. Proin diam lacus, tempor non felis eu, vestibulum maximus ligula. Etiam eu blandit justo. Nulla facilisi. Donec mi orci, feugiat in tempus at, dignissim at ipsum. Nulla eleifend congue purus, sed consequat justo suscipit id.</p> -->
+                    <ul>
+                        <li><span>HTML:</span> 디자인시안을 보고 테이블 레이아웃(UI/UX) 설계 및 마크업, 기타 구성요소 마크업 코딩 가능</li>
+                        <li><span>CSS:</span> 홈페이지 레이아웃(UI/UX) 설계 및 마크업, Media Query를 활용한 반응형 코딩 가능</li>
+                        <li><span>JAVASCRIPT:</span> 폼스크립트 구현 및 조건문, 제어문, 반복문, 함수, 객체, 이벤트 등 활용 웹사이트에 들어갈 보편적인 기능들 (메뉴,탭,슬라이더 등) 구현가능</li>
+                        <li><span>NODE.JS:</span> 데이터 베이스를 이용해 게시판, 페이징, 회원가입, 로그인 기능 구현 및 데이터 추가 삭제 활용 가능</li>
+                        <li><span>PHOTOSHOP:</span> 사진이미지 보정 및 편집 수정 가능</li>
+                        <li><span>ILLUSTRATOR:</span> 로고나 아이콘 관련 작업 가능</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -36,17 +53,24 @@
                         <h2 class="num">01</h2>
                         <h2 class="title">호텔 GRAND VELAS</h2>
                         <ul>
-                            <li>작업 기간: 2주</li>
-                            <li>구현 범위: pc / 모바일</li>
-                            <li>참여도: 퍼블리싱 100%</li>
-                            <li>서브페이지: About Hotel / 회원가입 / 로그인 / 개인정보 수정 / 게시판 / 방 소개페이지</li>
-                            <li>게시판: 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 삭제 기능 / 댓글 기능 / 검색 기능</li>
-                            <li>회원가입: 정규표현식 / 아이디 중복체크 가능</li>
-                            <li>자바스크립트: 카운트다운 등 구현</li>
-                            <li>라이브러리: AOS 사용</li>
+                            <li><span>작업 기간:</span> 2주</li>
+                            <li><span>구현 범위:</span> pc / 모바일</li>
+                            <li><span>참여도:</span> 퍼블리싱 100%</li>
+                            <li><span>서브페이지:</span>
+                                <a href="https://portfolio01-370705.du.r.appspot.com/about_us">About Hotel</a> / 
+                                <a href="https://portfolio01-370705.du.r.appspot.com/register">회원가입</a> / 
+                                <a href="https://portfolio01-370705.du.r.appspot.com/login">로그인</a> / 
+                                <a href="https://portfolio01-370705.du.r.appspot.com/userInfo">개인정보 수정</a> / 
+                                <a href="https://portfolio01-370705.du.r.appspot.com/brdlist">게시판</a> / 
+                                <a href="https://portfolio01-370705.du.r.appspot.com/junior_suite">방 소개페이지</a>
+                            </li>
+                            <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 삭제 기능 / 댓글 기능 / 검색 기능</li>
+                            <li><span>회원가입:</span> 정규표현식 / 아이디 중복체크 가능</li>
+                            <li><span>자바스크립트:</span> 카운트다운 / 캐로셀 / 스크롤 이벤트 / 클릭 이벤트 등 구현</li>
+                            <li><span>라이브러리:</span> AOS / isotope 사용</li>
                         </ul>
                         <div class="address">
-                            <a href="https://elite-span-370405.du.r.appspot.com/"><i class="fa-solid fa-angle-right"></i> 상세 페이지</a>
+                            <a href="https://portfolio01-370705.du.r.appspot.com/"><i class="fa-solid fa-angle-right"></i> 상세 페이지</a>
                         </div>
                     </div>
                 </div>
@@ -60,14 +84,21 @@
                         <h2 class="num">02</h2>
                         <h2 class="title">캘리포니아 도넛 클럽</h2>
                         <ul>
-                            <li>작업 기간: 2주</li>
-                            <li>구현 범위: pc / 모바일</li>
-                            <li>참여도: 퍼블리싱 100%</li>
-                            <li>서브페이지: About Store / 창업 안내 / 메뉴 / 매장 목록 / 게시판 페이지</li>
-                            <li>게시판: 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 삭제 기능</li>
-                            <li>관리자 페이지: 상품 관리 페이지 / 매장 관리 페이지 / 게시판 관리 페이지 / 모든 페이지 추가 / 수정 / 삭제 기능 구현</li>
-                            <li>자바스크립트: 슬라이드 기능 / 카운트다운 / 캐로셀 등 기능 구현</li>
-                            <li>라이브러리: 카카오 지도 / AOS 사용</li>
+                            <li><span>작업 기간:</span> 2주</li>
+                            <li><span>구현 범위:</span> pc / 모바일</li>
+                            <li><span>참여도:</span> 퍼블리싱 100%</li>
+                            <li><span>서브페이지:</span> 
+                                <a href="https://portfolio02-370405.du.r.appspot.com/">About Store</a> / 
+                                <a href="https://portfolio02-370405.du.r.appspot.com/franchise">창업 안내</a> / 
+                                <a href="https://portfolio02-370405.du.r.appspot.com/menu/doughnut">메뉴</a> / 
+                                <a href="https://portfolio02-370405.du.r.appspot.com/storelist">매장 목록</a> / 
+                                <a href="https://portfolio02-370405.du.r.appspot.com/board/news">게시판 페이지</a> /
+                                <a href="https://portfolio02-370405.du.r.appspot.com/admin">관리자 페이지</a>
+                            </li>
+                            <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 삭제 기능</li>
+                            <li><span>관리자 페이지:</span> 상품 관리 페이지 / 매장 관리 페이지 / 게시판 관리 페이지 / 모든 페이지 추가 / 수정 / 삭제 기능 구현</li>
+                            <li><span>자바스크립트:</span> 슬라이드 기능 / 카운트다운 / 캐로셀 / 클릭 이벤트 등 구현</li>
+                            <li><span>라이브러리:</span> 카카오 지도 / AOS 사용</li>
                         </ul>
                         <div class="address">
                             <a href="https://portfolio02-370405.du.r.appspot.com/"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
@@ -85,14 +116,19 @@
                         <h2 class="num">03</h2>
                         <h2 class="title">리지안 안과</h2>
                         <ul>
-                            <li>작업 기간: 2주</li>
-                            <li>구현 범위: pc / 모바일</li>
-                            <li>참여도: 퍼블리싱 100%</li>
-                            <li>서브페이지: 보도자료 / 이벤트 / 자주하는질문 / 고객후기</li>
-                            <li>게시판: 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 삭제 기능</li>
-                            <li>관리자 페이지: 상담 예약 관리 / 보도 자료 관리 / 이벤트 관리 / 자주하는 질문 관리 / 고객후기 관리 / 모든 게시판 페이지 추가 / 수정 / 삭제 기능 구현</li>
-                            <li>자바스크립트: 카운트다운 등 구현</li>
-                            <li>라이브러리: swiper / AOS 사용</li>
+                            <li><span>작업 기간:</span> 2주</li>
+                            <li><span>구현 범위:</span> pc / 모바일</li>
+                            <li><span>참여도:</span> 퍼블리싱 100%</li>
+                            <li><span>서브페이지:</span> 
+                                <a href="https://portfolio03-370402.du.r.appspot.com/board">보도자료</a> / 
+                                <a href="https://portfolio03-370402.du.r.appspot.com/event">이벤트</a> / 
+                                <a href="https://portfolio03-370402.du.r.appspot.com/qna">자주하는질문</a> / 
+                                <a href="https://portfolio03-370402.du.r.appspot.com/review">고객후기</a>
+                            </li>
+                            <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 삭제 기능</li>
+                            <li><span>관리자 페이지:</span> 상담 예약 관리 / 보도 자료 관리 / 이벤트 관리 / 자주하는 질문 관리 / 고객후기 관리 / 모든 게시판 페이지 추가 / 수정 / 삭제 기능 구현</li>
+                            <li><span>자바스크립트:</span> 카운트다운 / 스크롤 이벤트 / 클릭 이벤트 / 정규표현식 등 구현</li>
+                            <li><span>라이브러리:</span> swiper / AOS 사용</li>
                         </ul>
                         <div class="address">
                             <a href="https://portfolio03-370402.du.r.appspot.com/"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
@@ -108,9 +144,18 @@
         <div class="contact">
             <div class="center">
                 <h4 class="bg">Contact Me</h4>
-                <h2>전화번호: <span>010-9066-4283</span></h2>
-                <h2>이메일 주소: <span>ryuda0101@naver.com</span></h2>
+                <div class="text_box">
+                    <h2 class="contact_me">Contact Me</h2>
+                    <div class="context">
+                        <h2><span>이름:</span> 류다연</h2>
+                        <h2><span>연락처:</span> 010-9066-4283</h2>
+                        <h2><span>이메일:</span> ryuda0101@naver.com</h2>
+                    </div>
+                </div>
             </div>
+        </div>
+        <div class="footer">
+            <p>Copyright © 2022 DAYEON RYU All right reserved.</p>
         </div>
     </div>
     <script src="js/scroll.js"></script>
