--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 </div>
             </div>
         </div>
-        <div class="artworks">
-            <div class="artwork01 artwork">
+        <div class="container">
+            <div class="artwork01 artwork cont">
                 <div class="left_text">
                     <div class="box">
                         <h2 class="num">01</h2>
-                        <h2 class="title">호텔 GRAND VELAS</h2>
+                        <h2 class="title"><a href="https://portfolio01-370705.du.r.appspot.com/">호텔 GRAND VELAS</a></h2>
                         <ul>
                             <li><span>작업 기간:</span> 2주</li>
                             <li><span>구현 범위:</span> pc / 모바일</li>
@@ -78,11 +78,11 @@
                     <img src="/img/Hotel.png">
                 </div>
             </div>
-            <div class="artwork02 artwork">
+            <div class="artwork02 artwork cont">
                 <div class="left_text">
                     <div class="box">
                         <h2 class="num">02</h2>
-                        <h2 class="title">캘리포니아 도넛 클럽</h2>
+                        <h2 class="title"><a href="https://portfolio02-370405.du.r.appspot.com/">캘리포니아 도넛 클럽</a></h2>
                         <ul>
                             <li><span>작업 기간:</span> 2주</li>
                             <li><span>구현 범위:</span> pc / 모바일</li>
@@ -92,12 +92,11 @@
                                 <a href="https://portfolio02-370405.du.r.appspot.com/franchise">창업 안내</a> / 
                                 <a href="https://portfolio02-370405.du.r.appspot.com/menu/doughnut">메뉴</a> / 
                                 <a href="https://portfolio02-370405.du.r.appspot.com/storelist">매장 목록</a> / 
-                                <a href="https://portfolio02-370405.du.r.appspot.com/board/news">게시판 페이지</a> /
-                                <a href="https://portfolio02-370405.du.r.appspot.com/admin">관리자 페이지</a>
+                                <a href="https://portfolio02-370405.du.r.appspot.com/board/news">게시판 페이지</a>
                             </li>
-                            <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 삭제 기능</li>
-                            <li><span>관리자 페이지:</span> 상품 관리 페이지 / 매장 관리 페이지 / 게시판 관리 페이지 / 모든 페이지 추가 / 수정 / 삭제 기능 구현</li>
-                            <li><span>자바스크립트:</span> 슬라이드 기능 / 카운트다운 / 캐로셀 / 클릭 이벤트 등 구현</li>
+                            <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 추가, 삭제 기능 구현</li>
+                            <li><span>관리자 페이지:</span> 상품 관리 페이지 / 매장 관리 페이지 / 게시판 관리 페이지 / 모든 페이지 추가, 수정, 삭제 기능 구현</li>
+                            <li><span>자바스크립트:</span> 슬라이드 기능 / 카운트다운 / 캐로셀 / gnb 탭메뉴 / 클릭 이벤트 등 구현</li>
                             <li><span>라이브러리:</span> 카카오 지도 / AOS 사용</li>
                         </ul>
                         <div class="address">
@@ -110,11 +109,11 @@
                     <img src="/img/Donut.png">
                 </div>
             </div>
-            <div class="artwork03 artwork">
+            <div class="artwork03 artwork cont">
                 <div class="left_text">
                     <div class="box">
                         <h2 class="num">03</h2>
-                        <h2 class="title">리지안 안과</h2>
+                        <h2 class="title"><a href="https://portfolio03-370402.du.r.appspot.com/">리지안 안과</a></h2>
                         <ul>
                             <li><span>작업 기간:</span> 2주</li>
                             <li><span>구현 범위:</span> pc / 모바일</li>
@@ -125,8 +124,8 @@
                                 <a href="https://portfolio03-370402.du.r.appspot.com/qna">자주하는질문</a> / 
                                 <a href="https://portfolio03-370402.du.r.appspot.com/review">고객후기</a>
                             </li>
-                            <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 삭제 기능</li>
-                            <li><span>관리자 페이지:</span> 상담 예약 관리 / 보도 자료 관리 / 이벤트 관리 / 자주하는 질문 관리 / 고객후기 관리 / 모든 게시판 페이지 추가 / 수정 / 삭제 기능 구현</li>
+                            <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 추가, 삭제, 댓글 기능 구현</li>
+                            <li><span>관리자 페이지:</span> 상담 예약 관리 / 보도 자료 관리 / 이벤트 관리 / 자주하는 질문 관리 / 고객후기 관리 / 모든 게시판 페이지 추가, 수정, 삭제 기능 구현</li>
                             <li><span>자바스크립트:</span> 카운트다운 / 스크롤 이벤트 / 클릭 이벤트 / 정규표현식 등 구현</li>
                             <li><span>라이브러리:</span> swiper / AOS 사용</li>
                         </ul>
@@ -140,16 +139,16 @@
                     <img src="/img/Hospital.png">
                 </div>
             </div>
-        </div>
-        <div class="contact">
-            <div class="center">
-                <h4 class="bg">Contact Me</h4>
-                <div class="text_box">
-                    <h2 class="contact_me">Contact Me</h2>
-                    <div class="context">
-                        <h2><span>이름:</span> 류다연</h2>
-                        <h2><span>연락처:</span> 010-9066-4283</h2>
-                        <h2><span>이메일:</span> ryuda0101@naver.com</h2>
+            <div class="contact cont">
+                <div class="center">
+                    <h4 class="bg">Contact Me</h4>
+                    <div class="text_box">
+                        <h2 class="contact_me">Contact Me</h2>
+                        <div class="context">
+                            <h2><span>이름:</span> 류다연</h2>
+                            <h2><span>연락처:</span> 010-9066-4283</h2>
+                            <h2><span>이메일:</span> ryuda0101@naver.com</h2>
+                        </div>
                     </div>
                 </div>
             </div>
