포트폴리오 소개페이지 수정1

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="wrap">
         <div class="header">
             <div class="center">
-                <h1><a href="http://ryuda0101.dothome.co.kr/">R.DAYEON</a></h1>
+                <h1><a href="https://ryuda0101.github.io/portfolio00/">R.DAYEON</a></h1>
                 <ul>
                     <li><a href="">Artwork 01</a></li>
                     <li><a href="">Artwork 02</a></li>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="right_img">
-                    <img src="/img/Hotel.png">
+                    <img src="img/Hotel.png">
                 </div>
             </div>
             <div class="artwork02 artwork cont">
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="right_img">
-                    <img src="/img/Donut.png">
+                    <img src="img/Donut.png">
                 </div>
             </div>
             <div class="artwork03 artwork cont">
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="right_img">
-                    <img src="/img/Hospital.png">
+                    <img src="img/Hospital.png">
                 </div>
             </div>
             <div class="contact cont">
