--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
                 <h4 class="bg">Web Publisher</h4>
                 <div class="top_line">
                     <h2></h2>
-                    <!-- <h3>언제나 새로운 것에 도전하고 끊임없이 성장하는 퍼블리셔를 추구합니다.</h3> -->
                     <h3>UI / UX DESIGNER & WEB PUBLISHER</h3>
                 </div>
                 <div class="bot_line">
                     <h2>SKILLS</h2>
-                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas viverra ipsum libero. Aliquam et eleifend velit. Sed molestie justo nisl, vitae auctor ligula vehicula nec. Praesent pulvinar tempor nisi. Donec eu felis at sem ultricies rhoncus. Vestibulum sit amet iaculis nisi, vel dapibus sem. Sed vel turpis maximus, vestibulum metus non, ornare erat. Morbi hendrerit, ante sed rhoncus ultricies, tellus lectus euismod augue, non viverra metus nibh eget urna. Proin diam lacus, tempor non felis eu, vestibulum maximus ligula. Etiam eu blandit justo. Nulla facilisi. Donec mi orci, feugiat in tempus at, dignissim at ipsum. Nulla eleifend congue purus, sed consequat justo suscipit id.</p> -->
                     <ul>
                         <li><span>HTML:</span> 디자인시안을 보고 테이블 레이아웃(UI/UX) 설계 및 마크업, 기타 구성요소 마크업 코딩 가능</li>
                         <li><span>CSS:</span> 홈페이지 레이아웃(UI/UX) 설계 및 마크업, Media Query를 활용한 반응형 코딩 가능</li>
@@ -51,18 +49,16 @@
                 <div class="left_text">
                     <div class="box">
                         <h2 class="num">01</h2>
-                        <h2 class="title"><a href="https://portfolio01-370705.du.r.appspot.com/">호텔 GRAND VELAS</a></h2>
+                        <h2 class="title"><a href="https://portfolio01-370705.du.r.appspot.com/" target="_blank">호텔 GRAND VELAS</a></h2>
                         <ul>
                             <li><span>작업 기간:</span> 2주</li>
                             <li><span>구현 범위:</span> pc / 모바일</li>
                             <li><span>참여도:</span> 퍼블리싱 100%</li>
                             <li><span>서브페이지:</span>
-                                <a href="https://portfolio01-370705.du.r.appspot.com/about_us">About Hotel</a> / 
-                                <a href="https://portfolio01-370705.du.r.appspot.com/register">회원가입</a> / 
-                                <a href="https://portfolio01-370705.du.r.appspot.com/login">로그인</a> / 
-                                <a href="https://portfolio01-370705.du.r.appspot.com/userInfo">개인정보 수정</a> / 
-                                <a href="https://portfolio01-370705.du.r.appspot.com/brdlist">게시판</a> / 
-                                <a href="https://portfolio01-370705.du.r.appspot.com/junior_suite">방 소개페이지</a>
+                                <a href="https://portfolio01-370705.du.r.appspot.com/about_us" target="_blank">About Hotel</a> / 
+                                <a href="https://portfolio01-370705.du.r.appspot.com/register" target="_blank">회원가입</a> / 
+                                <a href="https://portfolio01-370705.du.r.appspot.com/login" target="_blank">로그인</a> / 
+                                <a href="https://portfolio01-370705.du.r.appspot.com/junior_suite" target="_blank">방 소개페이지</a>
                             </li>
                             <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 삭제 기능 / 댓글 기능 / 검색 기능</li>
                             <li><span>회원가입:</span> 정규표현식 / 아이디 중복체크 가능</li>
@@ -70,7 +66,7 @@
                             <li><span>라이브러리:</span> AOS / isotope 사용</li>
                         </ul>
                         <div class="address">
-                            <a href="https://portfolio01-370705.du.r.appspot.com/"><i class="fa-solid fa-angle-right"></i> 상세 페이지</a>
+                            <a href="https://portfolio01-370705.du.r.appspot.com/" target="_blank"><i class="fa-solid fa-angle-right"></i> 상세 페이지</a>
                         </div>
                     </div>
                 </div>
@@ -82,17 +78,17 @@
                 <div class="left_text">
                     <div class="box">
                         <h2 class="num">02</h2>
-                        <h2 class="title"><a href="https://portfolio02-370405.du.r.appspot.com/">캘리포니아 도넛 클럽</a></h2>
+                        <h2 class="title"><a href="https://portfolio02-370405.du.r.appspot.com/" target="_blank">캘리포니아 도넛 클럽</a></h2>
                         <ul>
                             <li><span>작업 기간:</span> 2주</li>
                             <li><span>구현 범위:</span> pc / 모바일</li>
                             <li><span>참여도:</span> 퍼블리싱 100%</li>
                             <li><span>서브페이지:</span> 
-                                <a href="https://portfolio02-370405.du.r.appspot.com/">About Store</a> / 
-                                <a href="https://portfolio02-370405.du.r.appspot.com/franchise">창업 안내</a> / 
-                                <a href="https://portfolio02-370405.du.r.appspot.com/menu/doughnut">메뉴</a> / 
-                                <a href="https://portfolio02-370405.du.r.appspot.com/storelist">매장 목록</a> / 
-                                <a href="https://portfolio02-370405.du.r.appspot.com/board/news">게시판 페이지</a>
+                                <a href="https://portfolio02-370405.du.r.appspot.com/" target="_blank">About Store</a> / 
+                                <a href="https://portfolio02-370405.du.r.appspot.com/franchise" target="_blank">창업 안내</a> / 
+                                <a href="https://portfolio02-370405.du.r.appspot.com/menu/doughnut" target="_blank">메뉴</a> / 
+                                <a href="https://portfolio02-370405.du.r.appspot.com/storelist" target="_blank">매장 목록</a> / 
+                                <a href="https://portfolio02-370405.du.r.appspot.com/board/news" target="_blank">게시판 페이지</a>
                             </li>
                             <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 추가, 삭제 기능 구현</li>
                             <li><span>관리자 페이지:</span> 상품 관리 페이지 / 매장 관리 페이지 / 게시판 관리 페이지 / 모든 페이지 추가, 수정, 삭제 기능 구현</li>
@@ -100,8 +96,8 @@
                             <li><span>라이브러리:</span> 카카오 지도 / AOS 사용</li>
                         </ul>
                         <div class="address">
-                            <a href="https://portfolio02-370405.du.r.appspot.com/"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
-                            <a href="https://portfolio02-370405.du.r.appspot.com/admin"><i class="fa-solid fa-angle-right"></i> 관리자 페이지</a>
+                            <a href="https://portfolio02-370405.du.r.appspot.com/" target="_blank"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
+                            <a href="https://portfolio02-370405.du.r.appspot.com/admin" target="_blank"><i class="fa-solid fa-angle-right"></i> 관리자 페이지</a>
                         </div>
                     </div>
                 </div>
@@ -119,10 +115,10 @@
                             <li><span>구현 범위:</span> pc / 모바일</li>
                             <li><span>참여도:</span> 퍼블리싱 100%</li>
                             <li><span>서브페이지:</span> 
-                                <a href="https://portfolio03-370402.du.r.appspot.com/board">보도자료</a> / 
-                                <a href="https://portfolio03-370402.du.r.appspot.com/event">이벤트</a> / 
-                                <a href="https://portfolio03-370402.du.r.appspot.com/qna">자주하는질문</a> / 
-                                <a href="https://portfolio03-370402.du.r.appspot.com/review">고객후기</a>
+                                <a href="https://portfolio03-370402.du.r.appspot.com/board" target="_blank">보도자료</a> / 
+                                <a href="https://portfolio03-370402.du.r.appspot.com/event" target="_blank">이벤트</a> / 
+                                <a href="https://portfolio03-370402.du.r.appspot.com/qna" target="_blank">자주하는질문</a> / 
+                                <a href="https://portfolio03-370402.du.r.appspot.com/review" target="_blank">고객후기</a>
                             </li>
                             <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 추가, 삭제, 댓글 기능 구현</li>
                             <li><span>관리자 페이지:</span> 상담 예약 관리 / 보도 자료 관리 / 이벤트 관리 / 자주하는 질문 관리 / 고객후기 관리 / 모든 게시판 페이지 추가, 수정, 삭제 기능 구현</li>
@@ -130,8 +126,8 @@
                             <li><span>라이브러리:</span> swiper / AOS 사용</li>
                         </ul>
                         <div class="address">
-                            <a href="https://portfolio03-370402.du.r.appspot.com/"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
-                            <a href="https://portfolio03-370402.du.r.appspot.com/admin_login"><i class="fa-solid fa-angle-right"></i> 관리자 페이지</a>
+                            <a href="https://portfolio03-370402.du.r.appspot.com/" target="_blank"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
+                            <a href="https://portfolio03-370402.du.r.appspot.com/admin_login" target="_blank"><i class="fa-solid fa-angle-right"></i> 관리자 페이지</a>
                         </div>
                     </div>
                 </div>
