타이핑 수정

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h4 class="bg">Web Publisher</h4>
                 <div class="top_line">
                     <h2></h2>
-                    <h3>UI / UX DESIGNER & WEB PUBLISHER</h3>
+                    <h3>WEB PUBLISHER & FRONT END DEVELOPER</h3>
                 </div>
                 <div class="bot_line">
                     <h2>SKILLS</h2>
