배경 글씨 수정

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="main_banner">
             <div class="center">
-                <h4 class="bg">Web Publisher</h4>
+                <h4 class="bg">Web Creator</h4>
                 <div class="top_line">
                     <h2></h2>
                     <h3>WEB PUBLISHER & FRONT END DEVELOPER</h3>
