--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         <li><span>CSS:</span> 홈페이지 레이아웃(UI/UX) 설계 및 마크업, Media Query를 활용한 반응형 코딩 가능</li>
                         <li><span>JAVASCRIPT:</span> 폼스크립트 구현 및 조건문, 제어문, 반복문, 함수, 객체, 이벤트 등 활용 웹사이트에 들어갈 보편적인 기능들 (메뉴,탭,슬라이더 등) 구현가능</li>
                         <li><span>NODE.JS:</span> 데이터 베이스를 이용해 게시판, 페이징, 회원가입, 로그인 기능 구현 및 데이터 추가 삭제 활용 가능</li>
+                        <li><span>REACT.JS:</span> 컴포넌트 생성 및 UI 구현, props를 통해 컴포넌트 재활용 및 useEffect 함수를 이용한 스크립트 동적 기능 구현 가능</li>
                         <li><span>PHOTOSHOP:</span> 사진이미지 보정 및 편집 수정 가능</li>
                         <li><span>ILLUSTRATOR:</span> 로고나 아이콘 관련 작업 가능</li>
                     </ul>
