--- a/index.html
+++ b/index.html
@@ -139,6 +139,32 @@
                     <img src="img/Hospital.png">
                 </div>
             </div>
+            <div class="artwork04 artwork cont">
+                <div class="left_text">
+                    <div class="box">
+                        <h2 class="num">04</h2>
+                        <h2 class="title"><a href="#">테틀리</a></h2>
+                        <ul>
+                            <li><span>작업 기간:</span> 1주</li>
+                            <li><span>구현 범위:</span> pc / 모바일</li>
+                            <li><span>참여도:</span> 퍼블리싱 100%</li>
+                            <li><span>서브페이지:</span> 
+                                <a href="#" target="_blank">About Tetly</a> / 
+                                <a href="#" target="_blank">Learn & Explore</a> / 
+                                <a href="#" target="_blank">Product List</a> / 
+                            </li>
+                            <li><span>리엑트:</span> 전체 페이지 구현 / 스크롤 이벤트 / 클릭 이벤트 등 구현</li>
+                            <!-- <li><span>라이브러리:</span> swiper / AOS 사용</li> -->
+                        </ul>
+                        <div class="address">
+                            <a href="#" target="_blank"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="right_img">
+                    <img src="img/Hospital.png">
+                </div>
+            </div>
             <div class="contact cont">
                 <div class="center">
                     <h4 class="bg">Contact Me</h4>
