--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
             <div class="center">
                 <h1><a href="https://ryuda0101.github.io/portfolio00/">R.DAYEON</a></h1>
                 <ul>
-                    <li><a href="">Artwork 01</a></li>
-                    <li><a href="">Artwork 02</a></li>
-                    <li><a href="">Artwork 03</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#">Artwork 01</a></li>
+                    <li><a href="#">Artwork 02</a></li>
+                    <li><a href="#">Artwork 03</a></li>
+                    <li><a href="#">Artwork 04</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -149,20 +150,20 @@
                             <li><span>구현 범위:</span> pc / 모바일</li>
                             <li><span>참여도:</span> 퍼블리싱 100%</li>
                             <li><span>서브페이지:</span> 
-                                <a href="#" target="_blank">About Tetly</a> / 
-                                <a href="#" target="_blank">Learn & Explore</a> / 
-                                <a href="#" target="_blank">Product List</a> / 
+                                <a href="https://nimble-croissant-b58220.netlify.app/About" target="_blank">About Tetly</a> / 
+                                <a href="https://nimble-croissant-b58220.netlify.app/Learn&Explore" target="_blank">Learn & Explore</a> / 
+                                <a href="https://nimble-croissant-b58220.netlify.app/Shop" target="_blank">Product List</a> / 
                             </li>
                             <li><span>리엑트:</span> 전체 페이지 구현 / 스크롤 이벤트 / 클릭 이벤트 등 구현</li>
                             <!-- <li><span>라이브러리:</span> swiper / AOS 사용</li> -->
                         </ul>
                         <div class="address">
-                            <a href="#" target="_blank"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
+                            <a href="https://nimble-croissant-b58220.netlify.app/" target="_blank"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
                         </div>
                     </div>
                 </div>
                 <div class="right_img">
-                    <img src="img/Hospital.png">
+                    <img src="img/Tetley.png">
                 </div>
             </div>
             <div class="contact cont">
