--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
                     </div>
                 </div>
                 <div class="right_img">
-                    <img src="img/Tetley.png">
+                    <a href="https://nimble-croissant-b58220.netlify.app/" target="_blank">
+                        <img src="img/Tetley.png">
+                    </a>
                 </div>
             </div>
             <div class="contact cont">
