--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                         <h2 class="contact_me">Contact Me</h2>
                         <div class="context">
                             <h2><span>이름:</span> 류다연</h2>
-                            <h2><span>연락처:</span> 010-9066-4283</h2>
-                            <h2><span>이메일:</span> ryuda0101@naver.com</h2>
+                            <h2><span>연락처:</span> </h2>
+                            <h2><span>이메일:</span> </h2>
                         </div>
                     </div>
                 </div>
