--- a/index.html
+++ b/index.html
@@ -18,14 +18,27 @@
     <div id="wrap">
         <div class="header">
             <div class="center">
-                <h1><a href="https://ryuda0101.github.io/portfolio00/">R.DAYEON</a></h1>
+                <h1><a href="https://ryuda0101.github.io/pf00/">R.DAYEON</a></h1>
                 <ul>
                     <li><a href="#">Artwork 01</a></li>
                     <li><a href="#">Artwork 02</a></li>
                     <li><a href="#">Artwork 03</a></li>
                     <li><a href="#">Artwork 04</a></li>
+                    <li><a href="#">Artwork 05</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
+                <button class="ham_btn">≡</button>
+            </div>
+            <div class="ham">
+                <ul>
+                    <li><a href="#">Artwork 01</a></li>
+                    <li><a href="#">Artwork 02</a></li>
+                    <li><a href="#">Artwork 03</a></li>
+                    <li><a href="#">Artwork 04</a></li>
+                    <li><a href="#">Artwork 05</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <button>Ⅹ</button>
             </div>
         </div>
         <div class="main_banner">
@@ -38,13 +51,15 @@
                 <div class="bot_line">
                     <h2>SKILLS</h2>
                     <ul>
-                        <li><span>HTML:</span> 디자인시안을 보고 테이블 레이아웃(UI/UX) 설계 및 마크업, 기타 구성요소 마크업 코딩 가능</li>
-                        <li><span>CSS:</span> 홈페이지 레이아웃(UI/UX) 설계 및 마크업, Media Query를 활용한 반응형 코딩 가능</li>
+                        <li><span>VUE:</span> a</li>
+                        <li><span>Nuxt.js:</span> a</li>
+                        <li><span>React:</span> 컴포넌트 생성 및 UI 구현, props를 통해 컴포넌트 재활용 및 useEffect 함수를 이용한 스크립트 동적 기능 구현 가능</li>
+                        <li><span>React Native:</span> a</li>
+                        <li><span>Next.js:</span> a</li>
+
+                        <li><span>HTML, CSS:</span> 디자인시안을 보고 홈페이지 레이아웃(UI/UX) 설계 및 마크업, Media Query를 활용한 반응형 코딩 가능</li>
                         <li><span>JAVASCRIPT:</span> 폼스크립트 구현 및 조건문, 제어문, 반복문, 함수, 객체, 이벤트 등 활용 웹사이트에 들어갈 보편적인 기능들 (메뉴,탭,슬라이더 등) 구현가능</li>
                         <li><span>NODE.JS:</span> 데이터 베이스를 이용해 게시판, 페이징, 회원가입, 로그인 기능 구현 및 데이터 추가 삭제 활용 가능</li>
-                        <li><span>REACT.JS:</span> 컴포넌트 생성 및 UI 구현, props를 통해 컴포넌트 재활용 및 useEffect 함수를 이용한 스크립트 동적 기능 구현 가능</li>
-                        <li><span>PHOTOSHOP:</span> 사진이미지 보정 및 편집 수정 가능</li>
-                        <li><span>ILLUSTRATOR:</span> 로고나 아이콘 관련 작업 가능</li>
                     </ul>
                 </div>
             </div>
@@ -53,127 +68,109 @@
             <div class="artwork01 artwork cont">
                 <div class="left_text">
                     <div class="box">
-                        <h2 class="num">01</h2>
-                        <h2 class="title"><a href="https://portfolio-01.onrender.com/" target="_blank">호텔 GRAND VELAS</a></h2>
+                        <h2 class="title"><span class="num">01</span> 페리카나</a></h2>
                         <ul>
-                            <li><span>작업 기간:</span> 2주</li>
+                            <li><span>작업 기간:</span> 2023.02 ~ 2023.11</li>
                             <li><span>구현 범위:</span> pc / 모바일</li>
-                            <li><span>참여도:</span> 퍼블리싱 100%</li>
-                            <li><span>서브페이지:</span>
-                                <a href="https://portfolio-01.onrender.com/about_us" target="_blank">About Hotel</a> / 
-                                <a href="https://portfolio-01.onrender.com/register" target="_blank">회원가입</a> / 
-                                <a href="https://portfolio-01.onrender.com/login" target="_blank">로그인</a> / 
-                                <a href="https://portfolio-01.onrender.com/junior_suite" target="_blank">방 소개페이지</a>
-                            </li>
-                            <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 삭제 기능 / 댓글 기능 / 검색 기능</li>
-                            <li><span>회원가입:</span> 정규표현식 / 아이디 중복체크 가능</li>
-                            <li><span>자바스크립트:</span> 카운트다운 / 캐로셀 / 스크롤 이벤트 / 클릭 이벤트 등 구현</li>
-                            <li><span>라이브러리:</span> AOS / isotope 사용</li>
+                            <li><span>참여도:</span> 퍼블리싱 30% 전체 페이지 반응형 전환</li>
+                            <li><span>사용기술:</span> Vue</li>
                         </ul>
                         <div class="address">
-                            <a href="https://portfolio-01.onrender.com/" target="_blank"><i class="fa-solid fa-angle-right"></i> 상세 페이지</a>
+                            <a href="https://www.pelicana.co.kr/main" target="_blank"><i class="fa-solid fa-angle-right"></i> 상세 페이지</a>
                         </div>
                     </div>
                 </div>
                 <div class="right_img">
-                    <a href="https://portfolio-01.onrender.com" target="_blank">
-                        <img src="img/Hotel.png">
+                    <a href="https://www.pelicana.co.kr/main" target="_blank">
+                        <img src="img/img_right01.jpeg">
                     </a>
                 </div>
             </div>
             <div class="artwork02 artwork cont">
                 <div class="left_text">
                     <div class="box">
-                        <h2 class="num">02</h2>
-                        <h2 class="title"><a href="https://portfolio-02.onrender.com/" target="_blank">캘리포니아 도넛 클럽</a></h2>
+                        <h2 class="title"><span class="num">02</span> KDB NextONE</a></h2>
                         <ul>
-                            <li><span>작업 기간:</span> 2주</li>
+                            <li><span>작업 기간:</span> 2023.03 ~ 2023.05</li>
                             <li><span>구현 범위:</span> pc / 모바일</li>
-                            <li><span>참여도:</span> 퍼블리싱 100%</li>
-                            <li><span>서브페이지:</span> 
-                                <a href="https://portfolio-02.onrender.com/" target="_blank">About Store</a> / 
-                                <a href="https://portfolio-02.onrender.com/franchise" target="_blank">창업 안내</a> / 
-                                <a href="https://portfolio-02.onrender.com/menu/doughnut" target="_blank">메뉴</a> / 
-                                <a href="https://portfolio-02.onrender.com/storelist" target="_blank">매장 목록</a> / 
-                                <a href="https://portfolio-02.onrender.com/board/news" target="_blank">게시판 페이지</a>
-                            </li>
-                            <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 추가, 삭제 기능 구현</li>
-                            <li><span>관리자 페이지:</span> 상품 관리 페이지 / 매장 관리 페이지 / 게시판 관리 페이지 / 모든 페이지 추가, 수정, 삭제 기능 구현</li>
-                            <li><span>자바스크립트:</span> 슬라이드 기능 / 카운트다운 / 캐로셀 / gnb 탭메뉴 / 클릭 이벤트 등 구현</li>
-                            <li><span>라이브러리:</span> 카카오 지도 / AOS 사용</li>
+                            <li><span>참여도:</span> 퍼블리싱 100% 반응형 UI 및 인터렉션 구현</li>
+                            <li><span>사용기술:</span> Html, Css, Scss, JavaScript</li>
                         </ul>
                         <div class="address">
-                            <a href="https://portfolio-02.onrender.com/" target="_blank"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
-                            <a href="https://portfolio-02.onrender.com/admin" target="_blank"><i class="fa-solid fa-angle-right"></i> 관리자 페이지</a>
+                            <a href="https://www.kdbnextone.kr/" target="_blank"><i class="fa-solid fa-angle-right"></i> 상세 페이지</a>
                         </div>
                     </div>
                 </div>
                 <div class="right_img">
-                    <a href="https://portfolio-02.onrender.com" target="_blank">
-                        <img src="img/Donut.png">
+                    <a href="https://www.kdbnextone.kr/" target="_blank">
+                        <img src="img/img_right02.jpeg">
                     </a>
                 </div>
             </div>
             <div class="artwork03 artwork cont">
                 <div class="left_text">
                     <div class="box">
-                        <h2 class="num">03</h2>
-                        <h2 class="title"><a href="https://portfolio-03.onrender.com/">리지안 안과</a></h2>
+                        <h2 class="title"><span class="num">03</span> 빨간모자 피자 주문 페이지 리뉴얼</a></h2>
                         <ul>
-                            <li><span>작업 기간:</span> 2주</li>
+                            <li><span>작업 기간:</span> 2024.11 ~ 2025.02</li>
                             <li><span>구현 범위:</span> pc / 모바일</li>
-                            <li><span>참여도:</span> 퍼블리싱 100%</li>
-                            <li><span>서브페이지:</span> 
-                                <a href="https://portfolio-03.onrender.com/board" target="_blank">보도자료</a> / 
-                                <a href="https://portfolio-03.onrender.com/event" target="_blank">이벤트</a> / 
-                                <a href="https://portfolio-03.onrender.com/qna" target="_blank">자주하는질문</a> / 
-                                <a href="https://portfolio-03.onrender.com/review" target="_blank">고객후기</a>
-                            </li>
-                            <li><span>게시판:</span> 목록 페이지 / 상세글 페이지 / 작성 페이지 / 수정 페이지 / 추가, 삭제, 댓글 기능 구현</li>
-                            <li><span>관리자 페이지:</span> 상담 예약 관리 / 보도 자료 관리 / 이벤트 관리 / 자주하는 질문 관리 / 고객후기 관리 / 모든 게시판 페이지 추가, 수정, 삭제 기능 구현</li>
-                            <li><span>자바스크립트:</span> 카운트다운 / 스크롤 이벤트 / 클릭 이벤트 / 정규표현식 등 구현</li>
-                            <li><span>라이브러리:</span> swiper / AOS 사용</li>
+                            <li><span>참여도:</span> 퍼블리싱 100% 반응형 UI 및 인터렉션 구현</li>
+                            <li><span>사용기술:</span> Html, Css, Scss, JavaScript</li>
                         </ul>
                         <div class="address">
-                            <a href="https://portfolio-03.onrender.com/" target="_blank"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
-                            <a href="https://portfolio-03.onrender.com/admin_login" target="_blank"><i class="fa-solid fa-angle-right"></i> 관리자 페이지</a>
+                            <a href="https://redcappizza.cntt.shop/order/order" target="_blank"><i class="fa-solid fa-angle-right"></i> 상세 페이지</a>
                         </div>
                     </div>
                 </div>
                 <div class="right_img">
-                    <a href="https://portfolio-03.onrender.com/" target="_blank">
-                        <img src="img/Hospital.png">
+                    <a href="https://redcappizza.cntt.shop/order/order" target="_blank">
+                        <img src="img/img_right03.jpeg">
                     </a>
                 </div>
             </div>
             <div class="artwork04 artwork cont">
                 <div class="left_text">
                     <div class="box">
-                        <h2 class="num">04</h2>
-                        <h2 class="title"><a href="#">테틀리</a></h2>
+                        <h2 class="title"><span class="num">04</span> 피자알볼로 웹, 모바일 앱 리뉴얼</a></h2>
                         <ul>
-                            <li><span>작업 기간:</span> 1주</li>
+                            <li><span>작업 기간:</span> 2024.11 ~ 2025.10</li>
                             <li><span>구현 범위:</span> pc / 모바일</li>
-                            <li><span>참여도:</span> 퍼블리싱 100%</li>
-                            <li><span>서브페이지:</span> 
-                                <a href="https://nimble-croissant-b58220.netlify.app/About" target="_blank">About Tetly</a> / 
-                                <a href="https://nimble-croissant-b58220.netlify.app/Learn&Explore" target="_blank">Learn & Explore</a> / 
-                                <a href="https://nimble-croissant-b58220.netlify.app/Shop" target="_blank">Product List</a> / 
-                            </li>
-                            <li><span>리엑트:</span> 전체 페이지 구현 / 스크롤 이벤트 / 클릭 이벤트 등 구현</li>
-                            <!-- <li><span>라이브러리:</span> swiper / AOS 사용</li> -->
+                            <li><span>참여도:</span> 소비자 페이지 웹, 앱 프론트 개발<br/>어드민페이지 웹 개발<br/>API 연동</li>
+                            <li><span>사용기술:</span> React, React Native, Next.js</li>
                         </ul>
                         <div class="address">
-                            <a href="https://nimble-croissant-b58220.netlify.app/" target="_blank"><i class="fa-solid fa-angle-right"></i> 메인 페이지</a>
+                            <a href="https://app.pizzaalvolo.co.kr/" target="_blank"><i class="fa-solid fa-angle-right"></i> 상세 페이지</a>
                         </div>
                     </div>
                 </div>
                 <div class="right_img">
-                    <a href="https://nimble-croissant-b58220.netlify.app/" target="_blank">
-                        <img src="img/Tetley.png">
+                    <a href="https://app.pizzaalvolo.co.kr/" target="_blank">
+                        <img src="img/img_right04.jpeg">
                     </a>
                 </div>
             </div>
+            <div class="artwork05 artwork cont">
+                <div class="left_text">
+                    <div class="box">
+                        <h2 class="title"><span class="num">05</span> BHC 홈페이지 리뉴얼</a></h2>
+                        <ul>
+                            <li><span>작업 기간:</span> 2025.09 ~ 2025.12</li>
+                            <li><span>구현 범위:</span> pc / 모바일</li>
+                            <li><span>참여도:</span> 소비자 페이지 웹 프론트 개발<br/>반응형 UI 및 인터렉션 구현<br/>API 연동</li>
+                            <li><span>사용기술:</span> React, Next.js</li>
+                        </ul>
+                        <div class="address">
+                            <a href="https://www.bhc.co.kr/" target="_blank"><i class="fa-solid fa-angle-right"></i> 상세 페이지</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="right_img">
+                    <a href="https://www.bhc.co.kr/" target="_blank">
+                        <img src="img/img_right05.jpeg">
+                    </a>
+                </div>
+            </div>
+
             <div class="contact cont">
                 <div class="center">
                     <h4 class="bg">Contact Me</h4>
@@ -181,8 +178,8 @@
                         <h2 class="contact_me">Contact Me</h2>
                         <div class="context">
                             <h2><span>이름:</span> 류다연</h2>
-                            <h2><span>연락처:</span> </h2>
-                            <h2><span>이메일:</span> </h2>
+                            <h2><span>연락처:</span> 지원서 참조</h2>
+                            <h2><span>이메일:</span> 지원서 참조</h2>
                         </div>
                     </div>
                 </div>
@@ -194,5 +191,6 @@
     </div>
     <script src="js/scroll.js"></script>
     <script src="js/typing.js"></script>
+    <script src="js/header.js"></script>
 </body>
 </html>
