Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                 <div class="bot_line">
                     <h2>SKILLS</h2>
                     <ul>
-                        <li><span>VUE:</span> a</li>
-                        <li><span>Nuxt.js:</span> a</li>
+                        <li><span>VUE:</span> 반응형 UI 구성 및 인터렉션·이벤트 중심의 화면 작업 경험</li>
+                        <li><span>Nuxt.js:</span> SSR 기반 프로젝트에서 반응형 레이아웃, 인터렉션, 이벤트 퍼블리싱 구현 가능</li>
                         <li><span>React:</span> 컴포넌트 생성 및 UI 구현, props를 통해 컴포넌트 재활용 및 useEffect 함수를 이용한 스크립트 동적 기능 구현 가능</li>
-                        <li><span>React Native:</span> a</li>
-                        <li><span>Next.js:</span> a</li>
+                        <li><span>React Native:</span> 웹·앱 공통 화면 개발 및 API 연동을 통한 하이브리드 앱 구현 경험</li>
+                        <li><span>Next.js:</span> 반응형 화면 개발과 인터렉션·이벤트 처리, API 연동을 포함한 페이지 구현 가능</li>
 
                         <li><span>HTML, CSS:</span> 디자인시안을 보고 홈페이지 레이아웃(UI/UX) 설계 및 마크업, Media Query를 활용한 반응형 코딩 가능</li>
                         <li><span>JAVASCRIPT:</span> 폼스크립트 구현 및 조건문, 제어문, 반복문, 함수, 객체, 이벤트 등 활용 웹사이트에 들어갈 보편적인 기능들 (메뉴,탭,슬라이더 등) 구현가능</li>
@@ -193,4 +193,5 @@
     <script src="js/typing.js"></script>
     <script src="js/header.js"></script>
 </body>
+
 </html>
